--- a/ddosdb/ddosdb/templates/ddosdb/header.html
+++ b/ddosdb/ddosdb/templates/ddosdb/header.html
@@ -4,11 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="{% static 'ddosdb/css/bootstrap.css' %}">
-    <link rel="stylesheet" href="{% static 'ddosdb/css/fontawesome.css' %}">
+    <link rel="stylesheet" href="{% static 'ddosdb/css/bootstrap-icons.css' %}">
     <link rel="stylesheet" href="{% static 'ddosdb/css/ddosdb.css' %}">
     <link rel="shortcut icon" href="{% static 'ddosdb/img/favicon.png' %}"/>
-    <!--
+
+    {% comment %}
     <script src="{% static 'ddosdb/js/bootstrap.bundle.js' %}"></script>
-    -->
+    {% endcomment %}
 
 </head>
