--- a/ddosdb/ddosdb/templates/ddosdb/index.html
+++ b/ddosdb/ddosdb/templates/ddosdb/index.html
@@ -3,15 +3,19 @@
 <html lang="en">
 <title>DDoSDB</title>
 {% include 'ddosdb/header.html' %}
-<body class="bg-light">
-{% include 'ddosdb/menu.html' %}
+<body>
+
+{% with title="DDoS DB" %}
+    {% include 'ddosdb/menu.html' %}
+{% endwith %}
+
 <div class="jumbotron">
-    <div class="container py-md-4 py-sm-3">
-        <div class="pb-md-5 pb-sm-3 text-center">
-            <h2 class="display-4 ddosdb-title"><strong>Collecting</strong> and <strong>Sharing</strong> the most important information of <strong>DDoS attacks</strong></h2>
+    <div class="container" id="bar">
+        <div class="pb-md-5 pb-sm-3 my-4 text-center">
+            <h2 class="display-4 ddosdb-title"><strong>Collecting</strong> and <strong>Sharing</strong> important information of <strong>DDoS attacks</strong></h2>
         </div>
 
-        <div class="container my-5" align="center">
+        <div class="container my-4" align="center">
             <a class="btn btn-ddosdb" target="_blank" href="{% url "overview" %}">Overview</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
             OR
@@ -20,13 +24,17 @@
         </div>
     </div>
 </div>
-<div class="container my-5">
-    <div class="row">
-        <div class="col-sm-12 col-md-5 col-lg-4">
-            <img src="{% static "ddosdb/img/illustration.svg" %}" class="img-fluid w-100 p-3">
+<div class="container my-5 align-top">
+    <div class="row align-items-start">
+        <div class="col-sm-12">
+            <h1 class="display-4 ddosdb-subtitle text-center">What is DDoSDB?</h1>
         </div>
-        <div class="col-sm-12 col-md-7 col-lg-8 mt-sm-4">
-            <h1 class="display-4 ddosdb-subtitle">What is DDoSDB?</h1>
+    </div>
+    <div class="row align-items-start">
+        <div class="col-sm-12 col-md-2">
+            <img src="{% static "ddosdb/img/illustration.svg" %}" class="img-fluid w-100 p-2">
+        </div>
+        <div class="col-sm-12 col-md-9">
             <p class="lead">
                 DDoSDB is a platform for helping victims of DDoS attacks, the academic community,
                 and the security community to share and get access to actual and enriched information of DDoS attacks.
