--- a/ddosdb/ddosdb/templates/ddosdb/menu.html
+++ b/ddosdb/ddosdb/templates/ddosdb/menu.html
@@ -1,25 +1,48 @@
 {% load static %}
 
 <div id="menu" class="container d-flex align-items-center">
-  <div class="col-xs-2">
+  <div class="col-sm-auto">
     <a href="{% url 'index' %}">
       <img title="go to start page" src="{% static "ddosdb/img/logo-new.svg" %}" height="32">
     </a>
   </div>
-  <div class="col">
+  <div class="col-sm-auto">
+    <a class="nav-link menu-icon" target="_blank" href="{% url 'about' %}">
+      <div title="about"><i class="bi-question-circle" style="font-size: 32px;"></i></div>
+    </a>
   </div>
-  <div class="col-xs-5">
+  <div class="col text-center">
+    <h1 class="display-4 ddosdb-subtitle">{{ title }}</h1>
+  </div>
+  <div class="col-xs-auto">
     <nav class="nav text-end">
       {% if not request.user.is_authenticated %}
-        <a class="nav-link" href="{% url 'login' %}">Log in</a>
+        <a class="nav-link disabled" target="_blank">
+          <div title="account information"><i class="bi-person" style="font-size: 32px;"></i></div>
+        </a>
+        <a class="nav-link disabled" target="_blank">
+          <div title="admin"><i class="bi-gear" style="font-size: 32px;"></i></div>
+        </a>
+        <a class="nav-link" href="{% url 'login' %}">
+          <div title="log in"><i class="bi-box-arrow-in-left" style="font-size: 32px;"></i></div>
+        </a>
       {% else %}
-        <a class="nav-link" href="{% url 'account' %}">Account</a>
-        <a class="nav-link" href="{% url 'logout' %}">Log out ({{ request.user.username }})</a>
+        <a class="nav-link" target="_blank" href="{% url 'account' %}">
+          <div title="user '{{ request.user.username }}' account information"><i class="bi-person" style="font-size: 32px;"></i></div>
+        </a>
         {% if request.user.is_superuser %}
-          <a class="nav-link" target="_blank" href="/admin/">admin</a>
+          <a class="nav-link" target="_blank" href="/admin/">
+            <div title="admin settings"><i class="bi-gear" style="font-size: 32px;"></i></div>
+          </a>
+        {% else %}
+          <a class="nav-link disabled" target="_blank">
+            <div title="admin settings"><i class="bi-gear" style="font-size: 32px;"></i></div>
+          </a>
         {% endif %}
+        <a class="nav-link menu-icon" href="{% url 'logout' %}">
+          <div title="log out user '{{ request.user.username }}'"><i class="bi-box-arrow-right" style="font-size: 32px;"></i></div>
+        </a>
       {% endif %}
-      <a class="nav-link" href="{% url 'about' %}">About</a>
       <!--
       <a class="p-2 text-dark" href="{% url 'index' %}">Blog</a>
       -->
