--- a/ddosdb/ddosdb/templates/ddosdb/overview.html
+++ b/ddosdb/ddosdb/templates/ddosdb/overview.html
@@ -11,9 +11,13 @@
 <html lang="en">
 <title>DDosDB - Overview</title>
 {% include 'ddosdb/header.html' %}
-<body class="bg-light">
-{% include 'ddosdb/menu.html' %}
+<body>
 
+{% with title="Fingerprints Overview" %}
+    {% include 'ddosdb/menu.html' %}
+{% endwith %}
+
+{% comment %}
 <div class="container">
   {% if q != "" %}
     <h1 align="center" class="display-4 ddosdb-subtitle">Overview of some fingerprints ({{ results|length }}) - (<a href="{% url "overview" %}?q=&o={{ o }}&so={{ so }}&son={{ son }}">show all</a>)</h1>
@@ -21,6 +25,7 @@
     <h1 align="center" class="display-4 ddosdb-subtitle">Overview of all fingerprints ({{ results|length }})</h1>
   {% endif %}
 </div>
+{% endcomment %}
 
 <div class="container">
   <table class="table table-sm table-hover text-center" align="center">
@@ -54,14 +59,16 @@
       {% for node in results %}
         <tr>
           <td>
-          {% if user.username == node|get_item:"submitter"  or user.is_superuser %}
+            {% if user.username == node|get_item:"submitter"  or user.is_superuser %}
               {% if o %}
-            <a href="{% url "delete" %}?key={{node|get_item:'key'}}&q={{ q }}&o={{ o }}&so={{ so }}&son={{ son }}">
+                <a href="{% url "delete" %}?key={{node|get_item:'key'}}&q={{ q }}&o={{ o }}&so={{ so }}&son={{ son }}">
               {% else %}
-            <a href="{% url "delete" %}?key={{node|get_item:'key'}}&q={{ q }}&o=key&so={{ so }}&son={{ son }}">
+                <a href="{% url "delete" %}?key={{node|get_item:'key'}}&q={{ q }}&o=key&so={{ so }}&son={{ son }}">
               {% endif %}
-              <img width="16" height="16" src="{% static "ddosdb/img/trash.png" %}">
-            </a>
+                  <div title="delete {{ node|get_item:'key' }}"><i class="bi-trash" style="font-size: 16px;"></i></div>
+                </a>
+          {% else %}
+            <i class="bi-trash" style="font-size: 16px; color: lightgrey;"></i>
           {% endif %}
           </td>
           {% for hdr,name in headers.items %}
@@ -90,27 +97,25 @@
                 </a>
               </div>
             {% elif hdr == "shareable" %}
-                {% if user.is_authenticated %}
+                {% if user.username == node|get_item:"submitter" or user.is_superuser %}
                   <div title="click to toggle shareable status">
-                  {% if user.username == node|get_item:"submitter"  or user.is_superuser %}
                     <a href="{% url "toggle-shareable" %}?q={{ q }}&key={{node|get_item:"key"}}&o={{ o }}&so={{ so }}&son={{ son }}&shareable={{node|get_item:hdr}}">
                     {% if node|get_item:hdr == True %}
-                        <img width="16" height="16" src="{% static "ddosdb/img/green_check.svg" %}">
+                      <i class="bi-check-circle" style="font-size: 16px; color: green;"></i>
                     {% else %}
-                        <img width="16" height="16" src="{% static "ddosdb/img/red_cross.svg" %}">
+                      <i class="bi-x-circle" style="font-size: 16px; color: red;"></i>
                     {% endif %}
-                  </a>
+                    </a>
                   </div>
                 {% else %}
                   <div title="shareable status">
-                  {% if node|get_item:hdr == True %}
-                      <img width="16" height="16" src="{% static "ddosdb/img/green_check.svg" %}">
-                  {% else %}
-                      <img width="16" height="16" src="{% static "ddosdb/img/red_cross.svg" %}">
-                  {% endif %}
+                    {% if node|get_item:hdr == True %}
+                      <i class="bi-check-circle" style="font-size: 16px; color: grey;"></i>
+                    {% else %}
+                      <i class="bi-x-circle" style="font-size: 16px; color: grey;"></i>
+                    {% endif %}
                   </div>
                 {% endif %}
-              {% endif %}
             {% elif hdr == "duration_sec" %}
                 {{node|get_item:hdr|precision:3}}
             {% elif hdr == "avg_bps" %}
@@ -129,16 +134,14 @@
               </div>
             {% elif hdr == "comment" %}
               <div title="{{node|get_item:hdr}}">
-                {{node|get_item:hdr|truncatechars:10}}
-                {% if user.is_authenticated %}
-                  {% if user.username == node|get_item:"submitter"  or user.is_superuser %}
-                  <span style="float:right;">
-                    &nbsp;(<a href="{% url "edit-comment" %}?key={{node|get_item:"key"}}">
-                      <img width="16" height="16" src="{% static "ddosdb/img/pencil.png" %}">
-                    </a>)
+                {% if user.username == node|get_item:"submitter"  or user.is_superuser %}
+                  <span style="float:left;">
+                    &nbsp;<a href="{% url "edit-comment" %}?key={{node|get_item:"key"}}">
+                      <i class="bi-pencil-square" style="font-size: 16px;"></i>
+                    </a>
                   </span>
-                  {% endif %}
                 {% endif %}
+                {{node|get_item:hdr|truncatechars:10}}
               </div>
             {% else %}
               {{node|get_item:hdr}}
