--- a/ddosdb/ddosdb/templates/ddosdb/overview.html
+++ b/ddosdb/ddosdb/templates/ddosdb/overview.html
@@ -28,7 +28,7 @@
 {% endcomment %}
 
 <div class="container">
-  <table class="table table-sm table-hover text-center" align="center">
+  <table class="table table-sm table-hover text-center ddosdb-table" align="center">
     <thead>
       <tr>
         <th nowrap="nowrap"></th>
