--- a/ddosdb/ddosdb/static/ddosdb/css/ddosdb.css
+++ b/ddosdb/ddosdb/static/ddosdb/css/ddosdb.css
@@ -9,7 +9,31 @@
     --ddosdb-sel: #216fdf;
     /* #a00000 */
     --ddosdb-txt: #333333;
+    --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+
+body {
+  font-size: 14pt !important;
+  background-color: white;
+  font-weight: lighter;
+}
+.ddosdb-table {
+  font-size: 0.9rem !important;
+}
+/*
+body {
+  margin: 0;
+  font-family: var(--bs-font-sans-serif);
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+*/
+
 
 
 [class*="container"] {
@@ -163,18 +187,6 @@ a:hover {
     border: none;
 }
 
-/*
-body {
-  margin: 0;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
-  color: #212529;
-  background-color: #fff;
-  -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-*/
 
 .card-title {
     font-size: 12pt;
