--- a/ddosdb/ddosdb/templates/ddosdb/menu.html
+++ b/ddosdb/ddosdb/templates/ddosdb/menu.html
@@ -12,7 +12,7 @@
     </a>
   </div>
   <div class="col text-center">
-    <h1 class="display-4 ddosdb-subtitle">{{ title }}</h1>
+    <h1 class="display-4 ddosdb-title">{{ title }}</h1>
   </div>
   <div class="col-xs-auto">
     <nav class="nav text-end">
